# SeekerBot

./: .dockerignore  Dockerfile  LICENSE  README.md  app.py  database.py  docker-compose.yml  pyproject.toml  seeker.py
core/: database.py
models/: job.py  match.py  resume.py
scripts/: create_master_cv.py  init_db.py  load_cvs.py  reset_db.py  run_matcher.py  run_seeker.py
services/: ai_manager.py  seeker.py  term_expander.py
static/css/: style.css
templates/: index.html
